@@ -1,3 +1,5 @@
+- Get chunked uploads working (they were almost completely broken).
+	
 ---------------------------------------------
 1.7 (2013-07-31)
 
